--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	// db log view
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.7.1'
 }
 
 test {
