--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,15 @@ spring:
       ddl-auto: create # 어플리케이션을 시작할 때 데이터베이스를 초기화하고 다시 테이블 생성
     properties:
       hibernate:
-        format_sql: true # 실행되는 query를 보여줌
+#        show_sql: true # SQL 출력
+#        format_sql: true # 실행되는 query를 보여줌
+#        use_sql_comments: true # JPQL 출력
 
-logging.level:
-  org.hibernate.SQL: debug
+#logging.level:
+#  org.hibernate.SQL: debug
+    
+# p6spy        
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true  
