--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // 3. querydsl dependencies
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    
+    // commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
 
 test {
