--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+      
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher    
 
   datasource:
     url: jdbc:h2:mem:test # test 부분을 자신이 원하는 것으로 바꾸시면 됩니다. 
